# svt

./: Svt Purchase (1).json  database.py  helper.py  main.py  pyproject.toml  webhook.py
static/: safe.js
templates/: base.html  buy.html  car.html  index.html  print.html  search.html  sell.html
