[tool.poetry]
name = "repl_nix_svt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.16.2"
Flask = "^2.3.2"
Flask-Cors = "^3.0.10"
sentry-sdk = "^1.25.1"
discord-webhook = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
